--- a/index.html
+++ b/index.html
@@ -68,34 +68,34 @@
                 <li class="team-card"><img src="./images/mark.jpg" alt="Mark Guerrero-our employee" width="264">
                 <div class="our-team-box"><h3 class="head-three">Mark Guerrero</h3><p class="paragraph">Product Designer</p>
                     <ul class="social-media">
-                    <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
                     </ul>
                 </div></li>
                 <li class="team-card"><img src="./images/tom.jpg" alt="Tom Ford-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Tom Ford</h3><p class="paragraph">Frontend Developer</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
                         </ul> </div>
                 </li>
                 <li class="team-card"><img src="./images/camila.jpg" alt="Camila Garcia-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Camila Garcia</h3><p class="paragraph">Marketing</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
                         </ul>
                 </div></li>
                 <li class="team-card"><img src="./images/daniel.jpg" alt="Daniel Wilson-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Daniel Wilson</h3><p class="paragraph">UI Designer</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a href="icon-link"><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
                         </ul>
                     </div></li>
             </ul>
