--- a/index.html
+++ b/index.html
@@ -116,9 +116,21 @@
         </section>
    </main>
    <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
         <a class="logo logo-footer" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div>
+            <p class="footer-paragraf-two">Social media</p>
+            <ul class="footer-list">
+                <li class="footer-list-one"><a href=""><svg class="footer-icon" width="24" height="24"><use xlink:href=""></use></svg></a></li>
+                <li class="footer-list-one"><a href=""><svg class="footer-icon" width="24" height="24"><use xlink:href=""></use></svg></a></li>
+                <li class="footer-list-one"><a href=""><svg class="footer-icon" width="24" height="24"><use xlink:href=""></use></svg></a></li>
+                <li class="footer-list-one"><a href=""><svg class="footer-icon" width="24" height="24"><use xlink:href=""></use></svg></a></li>
+
+            </ul>
+
+
         </div>
    </footer>
 </body>
