--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         </section>
    </main>
    <footer class="footer">
-        <div class="container footer-container">
+        <div class="container ">
+        <div class="footer-container">
         <a class="logo logo-footer" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
         </div>
         <div>
             <p class="footer-paragraf-two">Social media</p>
