--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <ul class="section-two-ul">
                 <li class="section-two-list-one">
                     <div class="our-content">
-                    <svg width="64" height="64"><use xlink:href="/images/.svg#icon-antenna 1"></use></svg></div>
+                    <svg width="64" height="64"><use xlink:href="./images/icons.svg#icon-antenna-1"></use></svg></div>
                     <h3 class="head-three left-our-content">Strategy</h3><p class="paragraph left-our-content">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li class="section-two-list-one"><div class="our-content">
-                    <svg width="64" height="64"><use xlink:href="./images/sprite.svg#"></use></svg></div>
+                    <svg width="64" height="64"><use xlink:href="./images/icons.svg#icon-clock-1"></use></svg></div>
                     <h3 class="head-three left-our-content">Punctuality</h3><p  class="paragraph left-our-content">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
                 <li class="section-two-list-one"><div class="our-content">
-                    <svg width="64" height="64"><use xlink:href="./images/sprite.svg#"></use></svg></div>
+                    <svg width="64" height="64"><use xlink:href="./images/icons.svg#icon-diagram-1"></use></svg></div>
                     <h3 class="head-three left-our-content">Diligence</h3><p class="paragraph left-our-content">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p></li>
                 <li class="section-two-list-one"><div class="our-content">
-                    <svg width="64" height="64"><use xlink:href="./images/sprite.svg#"></use></svg></div>
+                    <svg width="64" height="64"><use xlink:href="./images/icons.svg#icon-astronaut-1"></use></svg></div>
                     <h3 class="head-three left-our-content">Technologies</h3><p class="paragraph left-our-content">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
             </div>
@@ -65,37 +65,73 @@
             <div class="container">
             <h2 class="head-two">Our Team</h2>
             <ul class="section-tree-ul">
-                <li class="team-card"><img src="./images/mark.jpg" alt="Mark Guerrero-our employee" width="264">
+                <li class="team-card">
+                    <img src="./images/mark.jpg" alt="Mark Guerrero-our employee" width="264">
                 <div class="our-team-box"><h3 class="head-three">Mark Guerrero</h3><p class="paragraph">Product Designer</p>
                     <ul class="social-media">
-                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                    <li class="icon-item">
+                        <a class="icon-link" href="">
+                            <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+                    <li class="icon-item">
+                        <a class="icon-link" href="">
+                            <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+                    <li class="icon-item">
+                        <a class="icon-link" href="">
+                            <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+                    <li class="icon-item">
+                        <a class="icon-link" href="">
+                            <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
                     </ul>
                 </div></li>
-                <li class="team-card"><img src="./images/tom.jpg" alt="Tom Ford-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Tom Ford</h3><p class="paragraph">Frontend Developer</p>
+                <li class="team-card">
+                    <img src="./images/tom.jpg" alt="Tom Ford-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Tom Ford</h3><p class="paragraph">Frontend Developer</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
                         </ul> </div>
                 </li>
-                <li class="team-card"><img src="./images/camila.jpg" alt="Camila Garcia-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Camila Garcia</h3><p class="paragraph">Marketing</p>
+                <li class="team-card">
+                    <img src="./images/camila.jpg" alt="Camila Garcia-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Camila Garcia</h3><p class="paragraph">Marketing</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
                         </ul>
                 </div></li>
-                <li class="team-card"><img src="./images/daniel.jpg" alt="Daniel Wilson-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Daniel Wilson</h3><p class="paragraph">UI Designer</p>
+                <li class="team-card">
+                    <img src="./images/daniel.jpg" alt="Daniel Wilson-our employee" width="264"><div class="our-team-box"><h3 class="head-three">Daniel Wilson</h3><p class="paragraph">UI Designer</p>
                     <ul class="social-media">
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
-                        <li class="icon-item"><a class="icon-link" href=""><svg class="icon" width="16" height="16"><use xlink:href=""></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+                        <li class="icon-item">
+                            <a class="icon-link" href="">
+                                <svg class="icon" width="16" height="16"><use xlink:href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
                         </ul>
                     </div></li>
             </ul>
@@ -105,12 +141,12 @@
             <div class="container">
             <h2 class="head-two">Our Portfolio</h2>
             <ul class="our-portfolio">
-                <li class="our-portfolio-list"><div class="images"><img src="./images/Bankingapp.jpg" alt="Banking App" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Banking App</h3><p class="paragraph left-our-portfolio">App</p></div></li>
-                <li class="our-portfolio-list"><div class="images"><img src="./images/cashles.jpg" alt="Cashless Payment" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Cashless Payment</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
-                <li class="our-portfolio-list"><div class="images"><img src="./images/Meditations.jpg" alt="Meditation App" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Meditation App</h3><p class="paragraph left-our-portfolio">App</p></div></li>
-                <li class="our-portfolio-list"><div class="images"><img src="./images/taxi.jpg" alt="Taxi Service" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Taxi Service</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
-                <li class="our-portfolio-list"><div class="images"><img src="./images/screen.jpg" alt="Screen Illustrations" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Screen Illustrations</h3><p class="paragraph left-our-portfolio">Design</p></div></li>
-                <li class="our-portfolio-list"><div class="images"><img src="./images/online.jpg" alt="Online Courses" width="360"><p class="stylish">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Online Courses</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/Bankingapp.jpg" alt="Banking App" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Banking App</h3><p class="paragraph left-our-portfolio">App</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/cashles.jpg" alt="Cashless Payment" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Cashless Payment</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/Meditations.jpg" alt="Meditation App" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Meditation App</h3><p class="paragraph left-our-portfolio">App</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/taxi.jpg" alt="Taxi Service" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Taxi Service</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/screen.jpg" alt="Screen Illustrations" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Screen Illustrations</h3><p class="paragraph left-our-portfolio">Design</p></div></li>
+                <li class="our-portfolio-list"><div class="images"><img src="./images/online.jpg" alt="Online Courses" width="360"><p class="stylish">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div><div class="our-portfolio-box"><h3 class="head-three left-our-portfolio">Online Courses</h3><p class="paragraph left-our-portfolio">Marketing</p></div></li>
             </ul>
             </div>
         </section>
